--- a/frontend/src/styles/footer.scss
+++ b/frontend/src/styles/footer.scss
@@ -19,7 +19,7 @@
   .modal-link {
     &:hover {
       cursor: pointer;
-      color: #09D1B7;
+      color: #090cd1;
       text-decoration: underline;
     }
   }
