--- a/frontend/src/styles/header.scss
+++ b/frontend/src/styles/header.scss
@@ -21,4 +21,8 @@ $border-bottom: 2px;
   .navbar-light .navbar-toggler {
     background: #090cd1;
   }
+
+  #basic-navbar-nav {
+    margin: 10px;
+  }
 }
