--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -295,16 +295,25 @@ label {
 input[type="button"],
 button {
   margin: 10px;
-  /*   padding: 5px;
+  padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
   background: rgb(159, 191, 226);
   border: solid 1px transparent;
-  border-radius: 18px; */
+  border-radius: 18px;
+}
+
+input[type="text"],
+select {
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 5px;
 }
 
 .box {
-  border-style: solid;
+  border-style: dotted;
+  border-width: 1px;
+  border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
 }
