--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -108,7 +108,7 @@ body {
     background: white;
     color: #171717;
     border-radius: 20px;
-    border: 3px dashed #09d1b7;
+    border: 3px solid #63d109;
 
     .close span {
       color: #171717;
