--- a/frontend/src/styles/smallIcon.scss
+++ b/frontend/src/styles/smallIcon.scss
@@ -3,3 +3,10 @@ img {
   padding-left: 10px;
   padding-bottom: 5px;
 }
+
+.tooltipbtn {
+  background: white !important;
+  padding: 0px !important;
+  margin: 0px !important;
+  border: none !important;
+}
